# finqual

./: .gitignore  FinQual.py  LICENSE.md  README.md  balance_sheet.py  finqual.py  fred_api.py  income_statement.py  mappings.py  pyproject.toml  sec_sic.csv  setup.py  test.py  test_cprofile.py  test_forms.py
.github/workflows/: pypi-publish.yml  release.yml
data/: company_tickers.json
examples/: smoke_finqual.py  smoke_forms.py
finqual/: __init__.py  _cache.py  cashflow_statement.py  cca.py  core.py  finqual.py  form_13.py  form_4.py  form_parsers.py  node_tree.py  ratios.py  stocktwit.py
finqual/config/: headers.py
finqual/data/: gaap_labels.parquet  gaap_labels_v2.parquet  gaap_trees.json  ifrs_labels.parquet  ifrs_trees.json  sector_mapping.parquet  tickers_sectors.parquet
finqual/node_classes/: node.py  node_tree.py
finqual/sec_edgar/: sec_api.py  xml_utils.py
finqual/sec_edgar/entities/: exceptions.py  models.py
finqual/visualization/: single_ticker_visualization.py
requests/: requests.txt
tests/: annual_integration_test.py  conftest.py
tests/snapshots/: amzn_2021_2024.json  nvda_2021_2024.json
tests/unit/: test_build_rule.py  test_node.py  test_node_tree.py  test_period_helpers.py  test_ratios.py  test_sec_api_helpers.py  test_triangulate_smart.py  test_xml_utils.py
